--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title                    : "Yu Han Wu"
 title_separator          : "-"
 name                     : &name "Yu Han Wu"
 description              : &description "Machine Learning PhD student"
-url                      : https://yhwu.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://pojoowu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "pojoowu/pojoowu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
