--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=tvLkCK8AAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=u29ax6oAAAAJ"
   impactstory      : # URL
   orcid            : #URL
   semantic         : # URL
